[package]
authors = ["sanjeev <sanjeevp@localhost>"]
edition = "2018"
name    = "quic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "quinn_client"

[[bin]]
name = "quinn_client"
path = "src/quinn-client.rs"

[[bin]]
name = "quinn_server"
path = "src/quinn-server.rs"

[dependencies]
bytes            = { version = "1.0.1" }
directories-next = { version = "2.0.0" }
futures          = ""
qp2p             = { version = "0.10.1" }
quinn            = { version = "0.7.0" }
rcgen            = { version = "0.8.9" }
structopt        = { version = "0.3.21" }
tokio            = { version = "1.3.0", features = ["full"] }
url              = { version = "2.2.1" }
